# wake-on-lan-server

./: pyproject.toml
wol-server/: app.py
wol-server/templates/: index.html.jinja2
