[tool.poetry]
name = "wake-on-lan-server"
version = "0.1.0"
description = ""
authors = ["Peter Stather <peter.stather@g-portal.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
wakeonlan = "^3.1.0"
litestar = "^2.10.0"
jinja2 = "^3.1.4"
uvicorn = "^0.30.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
